recursion.logo.lessons.recursion.logo.dragoncurve.DragonCurve1.scala.error
DragonCurve1:7: error: not enough arguments for method dragon: (order: Int, x: Double, y: Double, z: Double, t: Double)Unit.
Unspecified value parameter t.
    dragon(order-1,z,t,(y + t)/2 - (z - x)/2);
          ^